turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: type mismatch;
 found   : Int
 required: java.awt.Color
  setCouleurBrosse(c);baisseBrosse();leveBrosse()
                   ^